//
//  HW3AccessibilityIdentifiers.swift
//  HW3
//
//  Created by Harrison Weinerman on 8/24/18.
//  Copyright © 2018 Harrison Weinerman. All rights reserved.
//

/// Contains accessibility identifiers used in ITP-342 HW3 for grading.
/// Don't change the contents of this file.
struct HW3AccessibilityIdentifiers {
    /// Identifier for your title UILabel
    static let titleLabel = "titleLabel"
    /// Identifier for the UITextField that the user can input their name into
    static let nameTextField = "nameTextField"
    /// Identifier for the first UIButton the user can press to select the first option
    static let optionButton1 = "optionButton1"
    /// Identifier for the second UIButton the user can press to select the second option
    static let optionButton2 = "optionButton2"
    /// Identifier for the UILabel that displays the message to the user based on their input
    static let outputLabel = "outputLabel"
    /// Identifer for the UIButton that resets the state of the app
    static let resetButton = "resetButton"
}
